@@ -4,7 +4,7 @@
 \title{Post a message via Pushbullet}
 \usage{
 pbPost(type = c("note", "link", "address", "file"), title = "", body = "",
-  url = "", filetype = "text/plain", recipients, deviceind,
+  url = "", filetype = "text/plain", recipients, email, deviceind,
   apikey = .getKey(), devices = .getDevices(), verbose = FALSE)
 }
 \arguments{
@@ -27,6 +27,10 @@ path of a file to be sent if \code{type} is \sQuote{file}.}
 devices this post should go to. If missing, the default device
 is looked up from an optional setting, and if none has been set
 the push is sent to all devices.}
+
+\item{email}{An alternative way to specify a recipient is to specify
+an email address. If both \code{recipients} and \code{email} are
+present, \code{recipients} is used.}
 
 \item{deviceind}{(Deprecated) The index (or a vector/list of indices) of the
 device(s) in the list of devices.}
